[package]
name = "zkhack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-poly = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false, features = ["derive"] }
ark-r1cs-std = { version = "0.4", default-features = false }
ark-bls12-381 = { version = "0.4", features = ["curve"], default-features = false }
ark-bw6-767 = { git = "https://github.com/w3f/arkworks-curves.git" }
ark-groth16 = { version = "0.4", features = ["std"], default-features = false }
ark-relations = { version = "0.4", default-features = false }
ark-snark = { version = "0.4", default-features = false }
rayon = "1"

[patch.crates-io]
ark-ff = { git = "https://github.com/w3f/arkworks-algebra.git" }
ark-ec = { git = "https://github.com/w3f/arkworks-algebra.git" }
ark-poly = { git = "https://github.com/w3f/arkworks-algebra.git" }
ark-serialize = { git = "https://github.com/w3f/arkworks-algebra.git" }